--- a/Machine-Learning/MLnotes.tex
+++ b/Machine-Learning/MLnotes.tex
@@ -11,6 +11,7 @@
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage{fancyvrb}
+\usetikzlibrary{matrix,chains,positioning,decorations.pathreplacing,arrows}
 
 \author{Eddie Shim}
 \title{Coursera Machine Learning Notes}
@@ -23,7 +24,7 @@
 	
 	\section{Regression}
 	\subsection{Linear Regression}
-	To perform a univariate linear regression, take a dataset of two variables and optimize the linear equation $y = \theta_1 x + \theta_0$. Use the least squares method which minimizes the convex parabolic equation $\sum_{i=1}^{m} (f(x) - y)^2$ , (where $(f(x)) -y)^2$ represents the residual squared). To find the minimal $\vec \theta = [\theta_0 \ \theta_1]$, calculate where the derivative of the equation equals 0. 
+	To perform a univariate linear regression, take a dataset of two variables and optimize the linear equation $y = \theta_1 x + \theta_0$. Use the least squares method which minimizes the convex parabolic equation $\sum_{i=1}^{m} (f(x) - y)^2$ , where $(f(x)) -y)^2$ represents the residual squared. To find the minimal $\vec \theta = [\theta_0 ; \theta_1]$, calculate where the derivative of the equation equals 0. 
 	
 \begin{itemize}
 	
@@ -105,8 +106,8 @@ h_\theta (x) &= g(\theta^Tx), \\
 
 \begin{center}
 \begin{tikzpicture}
-\begin{axis}[xlabel=$z$,ylabel=$g(z)$]
-\addplot[color=orange] {1/(1+exp{-x})};
+\begin{axis}[xmin = -4, xmax = 4, ymin = 0, ymax=1, xlabel=$z$,ylabel=$g(z)$]
+\addplot[very thick, orange] {1/(1+exp{-x})};
 \end{axis}
 \end{tikzpicture}	
 \end{center}
@@ -142,22 +143,29 @@ where cost $(h_\theta(x),y)$ =
 \begin{figure}[h]
 	\begin{minipage}{.55\textwidth}
 			\begin{tikzpicture}[scale=0.8]
-			\begin{axis}[xlabel=$h_\theta$(x),ylabel=cost]
-			\addplot[color=orange] {-ln(x)};
+			\begin{axis}[xmin=0,xmax=1,ymin=0,xlabel=$h_\theta$(x),ylabel=cost]
+			\addplot[very thick,orange, domain=0.01:4.5,smooth,samples=1000] {-ln(x)};
 			\end{axis}
 			\end{tikzpicture}	
+			
 	\end{minipage}
 		\begin{minipage}{.01\textwidth}
+			
 			\begin{tikzpicture}[scale=0.8]
-			\begin{axis}[xmin=0, xmax=1,xlabel=$h_\theta(x)$,ylabel=cost]
-			\addplot[color=orange] {ln(1-x)};
+			\begin{axis}[xmin=0, xmax=1,xlabel=$h_\theta(x)$,ylabel=cost, ymin=0]
+			\addplot[very thick,orange, domain=0.01:4.5,smooth,samples=1000] {-ln(1-x)};
 			\end{axis}
 			\end{tikzpicture}
-				
+			
 		\end{minipage}	
+		
+		\caption{Left: $-log(h_\theta (x))$ ; Right: $-log(1-h_\theta (x))$}
+	
+	
 \end{figure}
 
-\item We can create a more succinct function instead of using a piecewise function:
+\item We can create a more succinct function instead of using a piecewise function.\\
+\textbf{Cost function for logistic regression}:
 
 \begin{align*} 
 \text{cost}(h_\theta(x),y) &= -y*log(h_\theta(x)) - (1-y)*log(1-h_\theta(x))\\
@@ -165,7 +173,94 @@ J(\vec{\theta}) &= -\frac{1}{m}\Big(\sum_{i=1}^{m} y^{(i)}*log(h_\theta(x^{(i)})
 \end{align*}
 
 
+\begin{tikzpicture}[
+plain/.style={
+	draw=none,
+	fill=none,
+},
+net/.style={
+	matrix of nodes,
+	nodes={
+		draw,
+		circle,
+		inner sep=10pt
+	},
+	nodes in empty cells,
+	column sep=2cm,
+	row sep=-9pt
+},
+>=latex
+]
+\matrix[net] (mat)
+{
+	|[plain]| \parbox{1.3cm}{\centering Input\\layer} & |[plain]| \parbox{1.3cm}{\centering Hidden\\layer} & |[plain]| \parbox{1.3cm}{\centering Output\\layer} \\
+	& |[plain]| \\
+	|[plain]| & \\
+	& |[plain]| \\
+	|[plain]| & |[plain]| \\
+	& & \\
+	|[plain]| & |[plain]| \\
+	& |[plain]| \\
+	|[plain]| & \\
+	& |[plain]| \\
+};
+\foreach \ai [count=\mi ]in {2,4,...,10}
+\draw[<-] (mat-\ai-1) -- node[above] {Input \mi} +(-2cm,0);
+\foreach \ai in {2,4,...,10}
+{\foreach \aii in {3,6,9}
+	\draw[->] (mat-\ai-1) -- (mat-\aii-2);
+}
+\foreach \ai in {3,6,9}
+\draw[->] (mat-\ai-2) -- (mat-6-3);
+\draw[->] (mat-6-3) -- node[above] {Ouput} +(2cm,0);
+\end{tikzpicture}
 
+\begin{tikzpicture}[
+init/.style={
+	draw,
+	circle,
+	inner sep=2pt,
+	font=\Huge,
+	join = by -latex
+},
+squa/.style={
+	draw,
+	inner sep=2pt,
+	font=\Large,
+	join = by -latex
+},
+start chain=2,node distance=13mm
+]
+\node[on chain=2] 
+(x2) {$x_2$};
+\node[on chain=2,join=by o-latex] 
+{$w_2$};
+\node[on chain=2,init] (sigma) 
+{$\displaystyle\Sigma$};
+\node[on chain=2,squa,label=above:{\parbox{2cm}{\centering Activate \\ function}}]   
+{$f$};
+\node[on chain=2,label=above:Output,join=by -latex] 
+{$y$};
+\begin{scope}[start chain=1]
+\node[on chain=1] at (0,1.5cm) 
+(x1) {$x_1$};
+\node[on chain=1,join=by o-latex] 
+(w1) {$w_1$};
+\end{scope}
+\begin{scope}[start chain=3]
+\node[on chain=3] at (0,-1.5cm) 
+(x3) {$x_3$};
+\node[on chain=3,label=below:Weights,join=by o-latex] 
+(w3) {$w_3$};
+\end{scope}
+\node[label=above:\parbox{2cm}{\centering Bias \\ $b$}] at (sigma|-w1) (b) {};
+
+\draw[-latex] (w1) -- (sigma);
+\draw[-latex] (w3) -- (sigma);
+\draw[o-latex] (b) -- (sigma);
+
+\draw[decorate,decoration={brace,mirror}] (x1.north west) -- node[left=10pt] {Inputs} (x3.south west);
+\end{tikzpicture}
 
 
 \end{itemize}
