--- a/Machine-Learning/MLnotes.tex
+++ b/Machine-Learning/MLnotes.tex
@@ -26,7 +26,7 @@
 	
 	\section{Regression}
 	\subsection{Linear Regression}
-	To perform a univariate linear regression, take a dataset of two variables and optimize the linear equation $y = \theta_1 x + \theta_0$. Use the least squares method which minimizes the convex parabolic equation $\sum_{i=1}^{m} (f(x) - y)^2$ , where $(f(x)) -y)^2$ represents the residual squared. To find the minimal $\vec \theta = [\theta_0 ; \theta_1]$, calculate where the derivative of the equation equals 0. 
+	For a univariate linear regression, take a dataset of two variables and optimize the linear equation $y = \theta_1 x + \theta_0$. Use the least squares method $\sum_{i=1}^{m} (f(x) - y)^2$ , where $(f(x)) -y)^2$ represents the residual squared. To minimize residual squared, find $\vec\theta$ which makes the derivative of the cost function equal to 0. 
 	
 \begin{itemize}
 	
